sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:13: error: not found: value nombre
        nombre=getValeur(c)
        ^