sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var i=0
  while (i != getNombreValeurs() ){
    i+=1
    var c=0
    while (c != getNombreValeurs()-i){
      if (plusPetit(c,c+1)){
        c+=1
        echange(c,c+1)
      } 
      else {
        nombre=getValeur(c)
      }
    }
  }
}